Fix alignment of action icon in user  menu

--- a/app/webroot/css/layouts/default.css
+++ b/app/webroot/css/layouts/default.css
@@ -728,7 +728,7 @@ rt {
 
 .profile-action-item svg,
 .profile-action-item span {
-    display: inline-block;
+    display: inline;
     vertical-align: middle;
     margin-right: 3px;
 }
